add third block(carousel)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/promo.css">
     <link rel="stylesheet" href="/style/composition.css">
+    <link rel="stylesheet" href="/style/slider.css">
     <title>LevelUp</title>
 </head>
 <body>
@@ -97,5 +98,55 @@
             </div>
         </div>
     </div>
+    <div class="wrapper">
+        <div class="outer">
+          <div class="card" style="--delay:-1;">
+            <div class="content">
+              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="details">
+                <span class="name">Иван Иванов</span>
+                <p>Иван Иванов</p>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="--delay:0;">
+            <div class="content">
+              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="details">
+                <span class="name">Иван Иванов</span>
+                <p>Иван Иванов</p>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="--delay:1;">
+            <div class="content">
+              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="details">
+                <span class="name">Иван Иванов</span>
+                <p>Иван Иванов</p>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="--delay:2;">
+            <div class="content">
+              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="details">
+                <span class="name">Иван Иванов</span>
+                <p>Иван Иванов</p>
+              </div>
+            </div>
+          </div>
+          <div class="card" style="--delay:2;">
+            <div class="content">
+              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="details">
+                <span class="name">Иван Иванов</span>
+                <p>Иван Иванов</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>  
+    <script src="/script/slider.js"></script>
 </body>
 </html>
