--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="/style/main.css">
-    <link rel="stylesheet" href="/style/promo.css">
-    <link rel="stylesheet" href="/style/composition.css">
-    <link rel="stylesheet" href="/style/slider.css">
-    <link rel="stylesheet" href="/style/second-promo.css">
-    <link rel="stylesheet" href="/style/order-form.css">
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/promo.css">
+    <link rel="stylesheet" href="style/composition.css">
+    <link rel="stylesheet" href="style/slider.css">
+    <link rel="stylesheet" href="style/second-promo.css">
+    <link rel="stylesheet" href="style/order-form.css">
     <title>
       LevelUp
     </title>
@@ -28,7 +28,7 @@
         </div>
         <div class="product-desc">
             <div class="product-image">
-                <img src="/src/prod.png" alt="product-image">
+                <img src="src/prod.png" alt="product-image">
             </div>
             <div class="product-info">
                 <div class="charact">
@@ -110,7 +110,7 @@
         <div class="outer">
           <div class="card" style="--delay:-1;">
             <div class="content">
-              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="img"><img src="src/doctor.png" alt=""></div>
               <div class="details">
                 <span class="name">Иван Иванов</span>
                 <p>Иван Иванов</p>
@@ -119,7 +119,7 @@
           </div>
           <div class="card" style="--delay:0;">
             <div class="content">
-              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="img"><img src="src/doctor.png" alt=""></div>
               <div class="details">
                 <span class="name">Иван Иванов</span>
                 <p>Иван Иванов</p>
@@ -128,7 +128,7 @@
           </div>
           <div class="card" style="--delay:1;">
             <div class="content">
-              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="img"><img src="src/doctor.png" alt=""></div>
               <div class="details">
                 <span class="name">Иван Иванов</span>
                 <p>Иван Иванов</p>
@@ -137,7 +137,7 @@
           </div>
           <div class="card" style="--delay:2;">
             <div class="content">
-              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="img"><img src="src/doctor.png" alt=""></div>
               <div class="details">
                 <span class="name">Иван Иванов</span>
                 <p>Иван Иванов</p>
@@ -146,7 +146,7 @@
           </div>
           <div class="card" style="--delay:2;">
             <div class="content">
-              <div class="img"><img src="/src/doctor.png" alt=""></div>
+              <div class="img"><img src="src/doctor.png" alt=""></div>
               <div class="details">
                 <span class="name">Иван Иванов</span>
                 <p>Иван Иванов</p>
@@ -157,7 +157,7 @@
     </div>
     <div class="second-promo">
         <div class="person">
-          <img src="/src/doctor-levelup.png">
+          <img src="src/doctor-levelup.png">
         </div>
         <div class="product-spec">
           <p>
@@ -220,7 +220,7 @@
       </div>
       <div class="order-info">
         <div class="order-image">
-          <img src="/src/prod.png">
+          <img src="src/prod.png">
         </div>
         <div class="order-price">
           <div class="container">
@@ -250,7 +250,7 @@
         </button>
       </div>
     </div>
-    <script src="/script/timer.js"></script>
+    <script src="script/timer.js"></script>
     <script src="script/order.js"></script>
 </body>
 </html>
